aperently Auth is Finished

--- a/Resturant.WebAPI/appsettings.json
+++ b/Resturant.WebAPI/appsettings.json
@@ -6,10 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Data Source=.;Initial Catalog=Resturant;Integrated Security=True;MultipleActiveResultSets=true"
+  },
   "Jwt": {
     "Key": "ThisismySecretKey",
     "Issuer": "www.joydipkanjilal.net",
     "Audience": "http://localhost:36145/"
-  },
-  "AllowedHosts": "*"
+  }
 }
