--- a/Resturant.WebAPI/Resturant.WebAPI.csproj
+++ b/Resturant.WebAPI/Resturant.WebAPI.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <StartupObject>Resturant.WebAPI.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
