--- a/Resturant.Infrastructure/Resturant.Repository.csproj
+++ b/Resturant.Infrastructure/Resturant.Repository.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <StartupObject>Resturant.WebAPI.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
@@ -19,18 +19,16 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="OuterServices\" />
+    <Folder Include="InterFaces\" />
+    <Folder Include="Business\" />
   </ItemGroup>
 
-		<ItemGroup>
-		<ProjectReference Include="..\Resturant.Core\Resturant.Core.csproj" />
-		<ProjectReference Include="..\Resturant.Infrastructure\Resturant.Infrastructure.csproj" />
+	<ItemGroup>
+		<ProjectReference Include="..\Resturant.Core\Resturant.DataAccess.csproj" />
 	</ItemGroup>
-
+	
 
 </Project>
