--- a/Resturant.DBModels/Resturant.DBModels.csproj
+++ b/Resturant.DBModels/Resturant.DBModels.csproj
@@ -4,4 +4,15 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+
+
+	<ItemGroup>
+		<ProjectReference Include="..\Resturant.Utilities\Resturant.Utilities.csproj" />
+	</ItemGroup>
+	
+	
 </Project>
