--- a/Resturant.DataAccess/Resturant.DataAccess.csproj
+++ b/Resturant.DataAccess/Resturant.DataAccess.csproj
@@ -5,8 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.12">
       <PrivateAssets>all</PrivateAssets>
@@ -21,8 +19,9 @@
   </ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Resturant.DBModels\Resturant.DBModels.csproj" />
-		<ProjectReference Include="..\Resturant.Repository\Resturant.Repository.csproj" />
-		<ProjectReference Include="..\Resturant.Resources\Resturant.Resources.csproj" />
 		<ProjectReference Include="..\Resturant.Utilities\Resturant.Utilities.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
 	</ItemGroup>
 </Project>
