--- a/Resturant.Repository/Resturant.Repository.csproj
+++ b/Resturant.Repository/Resturant.Repository.csproj
@@ -1,12 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.12">
       <PrivateAssets>all</PrivateAssets>
@@ -21,8 +19,6 @@
   </ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Resturant.DBModels\Resturant.DBModels.csproj" />
-		<ProjectReference Include="..\Resturant.Repository\Resturant.Repository.csproj" />
-		<ProjectReference Include="..\Resturant.Resources\Resturant.Resources.csproj" />
-		<ProjectReference Include="..\Resturant.Utilities\Resturant.Utilities.csproj" />
+		<ProjectReference Include="..\Resturant.DataAccess\Resturant.DataAccess.csproj" />
 	</ItemGroup>
 </Project>
