--- a/_Core_DataAccess/Resturant.DataAccess.csproj
+++ b/_Core_DataAccess/Resturant.DataAccess.csproj
@@ -1,19 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.12">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,8 +18,6 @@
   </ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Resturant.DBModels\Resturant.DBModels.csproj" />
-		<ProjectReference Include="..\Resturant.Repository\Resturant.Repository.csproj" />
-		<ProjectReference Include="..\Resturant.Resources\Resturant.Resources.csproj" />
-		<ProjectReference Include="..\Resturant.Utilities\Resturant.Utilities.csproj" />
 	</ItemGroup>
+
 </Project>
