--- a/Resturant.CoreBase/Resturant.CoreBase.csproj
+++ b/Resturant.CoreBase/Resturant.CoreBase.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+  </ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Resturant.Middlewares\Resturant.Middlewares.csproj" />
 		<ProjectReference Include="..\Resturant.StartupConfiguration\Resturant.StartupConfiguration.csproj" />
