--- a/Resturant.Middlewares/Resturant.Middlewares.csproj
+++ b/Resturant.Middlewares/Resturant.Middlewares.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+  </ItemGroup>
+
 
 	<ItemGroup>
 		<ProjectReference Include="..\Resturant.Services\Resturant.Services.csproj" />
