--- a/Resturant.Services/Resturant.Services.csproj
+++ b/Resturant.Services/Resturant.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
@@ -24,5 +25,8 @@
 		<ProjectReference Include="..\Resturant.Repository\Resturant.Repository.csproj" />
 		<ProjectReference Include="..\Resturant.Resources\Resturant.Resources.csproj" />
 		<ProjectReference Include="..\Resturant.Utilities\Resturant.Utilities.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Srvc_External\" />
 	</ItemGroup>
 </Project>
