--- a/Resturant.Utilities/Resturant.Utilities.csproj
+++ b/Resturant.Utilities/Resturant.Utilities.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Enums\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
