--- a/Resturant.WebAPI.Guest/Resturant.WebAPI.Guest.csproj
+++ b/Resturant.WebAPI.Guest/Resturant.WebAPI.Guest.csproj
@@ -5,7 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Resturant.Middlewares\Resturant.Middlewares.csproj" />
+		<ProjectReference Include="..\Resturant.DBModels\Resturant.DBModels.csproj" />
+		<ProjectReference Include="..\Resturant.Repository\Resturant.Repository.csproj" />
+		<ProjectReference Include="..\Resturant.Services\Resturant.Services.csproj" />
+		<ProjectReference Include="..\Resturant.CoreBase\Resturant.CoreBase.csproj" />
+		<ProjectReference Include="..\Resturant.StartupConfiguration\Resturant.StartupConfiguration.csproj" />
+	</ItemGroup>
 </Project>
