--- a/Resturant.WebAPI.Resturant/appsettings.json
+++ b/Resturant.WebAPI.Resturant/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Data Source=.;Initial Catalog=Resturant;Integrated Security=True;MultipleActiveResultSets=true"
+  },
+  "Jwt": {
+    "Key": "@!)_#_($+DSK_%+(%^drh*&^*E(JFBVLDSAD",
+    "Issuer": "11hlk)75@!%^^sdloJJ&("
+  }
 }
