--- a/Resturant.DataAccess/Resturant.DataAccess.csproj
+++ b/Resturant.DataAccess/Resturant.DataAccess.csproj
@@ -22,4 +22,7 @@
 		<ProjectReference Include="..\Resturant.DBModels\Resturant.DBModels.csproj" />
 		<ProjectReference Include="..\Resturant.Utilities\Resturant.Utilities.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
 </Project>
